--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
 <body class="bg-gray-300">
   <p>click here</p>
     <a href="./flow.html"><button class="btn btn-primary">For Information</button></a>
+
+  <div class="flex justify-center forRender text-white">
+
+  </div>
+
     <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
 <df-messenger
   intent="WELCOME"
