--- a/public/flow.html
+++ b/public/flow.html
@@ -9,7 +9,8 @@
 </head>
 <body class="bg-gray-300">
     <p>click here</p>
-    <a href="./index.html"><button class="btn btn-primary">For Booking</button></a>
+    <a href="./index.html"><button class="btn btn-primary">For DialogFlow</button></a>
+    <p class="text-danger">Both are capable</p>
     <script type="module">
         import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
         Chatbot.init({
