--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
 </head>
 <body class="bg-gray-300">
   <p>click here</p>
-    <a href="./flow.html"><button class="btn btn-primary">For Information</button></a>
+    <a href="./flow.html"><button class="btn btn-primary">For Flowise</button></a>
+    <p class="text-danger">Both are capable</p>
 
   <div class="flex justify-center forRender text-white">
 
